syntax = "proto3";
package m2g.pb;

enum ObjectType {
  NO_OBJECT = 0;
  PLAYER = 1;
  BALL = 2;
  FLIPPER_LEFT = 3;
  FLIPPER_RIGHT = 4;

  OBJECT_BASIC_WALLS = 10;
  OBJECT_BASIC_PLATFORM = 11;

  OBJECT_BALL_LAUNCHER_SENSOR = 20;
  OBJECT_BALL_PLATFORM_ENTRY_SENSOR = 21;
}
